--- a/src/ui.html
+++ b/src/ui.html
@@ -114,6 +114,23 @@
         </div>
 
         <div class="form-group">
+            <label class="materil-group">
+                <span class="materil-group__label">Textarea*</span>
+                <textarea class="form-control base-input materil-group__input materil-group__textarea"></textarea>
+            </label>
+        </div>
+
+        <div class="form-group">
+            <div class="input-file-container">
+                <input class="input-file" id="my-file" type="file">
+                <label tabindex="0" for="my-file" class="input-file-trigger">
+                    Выбрать файлы
+                </label>
+            </div>
+            <p class="file-return"></p>
+        </div>
+
+        <div class="form-group">
             <p>
                 <input type="radio" id="test1" name="radio-group" checked>
                 <label for="test1">Физическое лицо</label>
