--- a/src/add-to-blacklist.html
+++ b/src/add-to-blacklist.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Черный список</title>
+    <title>Добавить компанию в черный список</title>
 </head>
 
 <body class="page transition-off">
@@ -299,7 +299,7 @@
                 <span class="breadcrumbs__text">Черный список</span>
             </li>
         </ul>
-        <div class="additional additional__btn">
+        <div class="additional blacklist">
             <div class="row">
                 <div class="additional__sidebar col-3">
                     <div class="personal-account">
@@ -355,114 +355,44 @@
                 </div>
                 <div class="additional__content col-9">
                     <div class="additional__wrapper">
-                        <h2 class="h2">Черный список</h2>
-                        <p>В данном разделе портала STROIM100.RU представлены недобросовестные поставщики и покупатели
-                            строительных материалов, не исполняющие свои обязательства по договорам поставки (покупки) в
-                            той или иной мере, обманывающие своих покупателей (поставщиков).</p>
-                        <p>Информация имеет документальное подтверждение.</p>
-                        <p>Если у Вас есть сведения о мошенничестве и недобросовестности поставщиков или покупателей,
-                            сообщите нам:</p>
-                        <a href="#" class="btn btn-primary additional__btn">
-                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                 xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="9" cy="9" r="8.1" stroke="white" stroke-width="1.8"/>
-                                <line x1="5.9" y1="9.1" x2="12.1" y2="9.1" stroke="white" stroke-width="1.8"
-                                      stroke-linecap="round"/>
-                                <line x1="9.1" y1="12.1" x2="9.1" y2="5.9" stroke="white" stroke-width="1.8"
-                                      stroke-linecap="round"/>
-                            </svg>
-                            <span>Добавить компанию в черный список</span>
-                        </a>
-                        <form class="additional__form">
-                            <h4 class="h4">Список компаний</h4>
-                            <label class="search-input">
-                                <input type="text" class="form-control base-input search-input__field"
-                                       placeholder="Поиск">
-                                <button class="btn search-input__btn">
-                                    <img src="img/icon-search-gray.svg" alt="">
-                                </button>
+                        <h2 class="h2">Добавить компанию в черный список</h2>
+
+                        <p>В письме укажите Наименование поставщика, дату заключения договора поставки, краткое содержание, сумму договора, другие сведения.</p>
+                        <p>Для размещения Вашего уведомления просим Вас прикрепить к письму копии подтверждающих документов: Договор поставки (если имеется), Счёт к оплате, Копия платёжного документа, Акт сверки с данным предприятием. Предоставленные документы только для внутреннего пользования и не будут выложены в свободном доступе.</p>
+
+                        <form action="" class="additional__form additional__form--comments">
+                            <label class="materil-group">
+                                <span class="materil-group__label">Название вашей компании*</span>
+                                <input type="text" class="form-control base-input materil-group__input">
+                            </label>
+                            <label class="materil-group">
+                                <span class="materil-group__label">Название компании добавляемой в черный список*</span>
+                                <input type="text" class="form-control base-input materil-group__input">
+                            </label>
+                            <label class="materil-group">
+                                <span class="materil-group__label">Email</span>
+                                <input type="email" class="form-control base-input materil-group__input">
+                                <div class="materil-group__error-text">Укажите email</div>
+                            </label>
+                            <label class="materil-group">
+                                <span class="materil-group__label">Телефон</span>
+                                <input type="phone" class="form-control base-input materil-group__input phone-input">
+                                <div class="materil-group__error-text">Укажите Телефон</div>
+                            </label>
+                            <label class="materil-group">
+                                <span class="materil-group__label">Комментарий*</span>
+                                <textarea class="form-control base-input materil-group__input materil-group__textarea"></textarea>
+                            </label>
+                            <label class="materil-group">
+                                <input type="checkbox" name="check-one" value="check-one" />
+                                <span>Я принимаю условия
+                                    <a href="/" class="link link-sm">договора оферты</a>
+                                </span>
+                            </label>
+                            <label class="materil-group">
+                                <button class="btn btn-primary" type="submit">Отправить</button>
                             </label>
                         </form>
-                    </div>
-                    <div class="additional__list">
-                        <div class="additional__card additional__wrapper">
-                            <div class="black-card">
-                                <p class="black-card__date">
-                                    Опубликовано <strong>24.05.2021 в 10:30</strong>
-                                </p>
-                                <p class="black-card__info">
-                                   <span class="h4 black-card__name">
-                                       ООО “Плохие поставщики”
-                                   </span>
-                                    <a href="#" class="link link-sm">Перейти на сайт</a>
-                                </p>
-                                <p class="black-card__label">Причина:</p>
-                                <p class="black-card__text">
-                                    Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими,
-                                    из-за чего получили распространение в капитальном строительстве. Высокая. Тяжёлые
-                                    бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за
-                                    чего получили распространение в капитальном строительстве. Высокая. Тяжёлые бетоны
-                                    обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего
-                                    получили распространение в капитальном строительстве. Высокая. Тяжёлые бетоны
-                                    обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего
-                                    получили распространение в капитальном строительстве. Высокая.
-                                </p>
-                                <a href="#" class="link link-sm">Подробнее</a>
-                            </div>
-
-                        </div>
-                        <div class="additional__card additional__wrapper">
-                            <div class="black-card">
-                                <p class="black-card__date">
-                                    Опубликовано <strong>24.05.2021 в 10:30</strong>
-                                </p>
-                                <p class="black-card__info">
-                                   <span class="h4 black-card__name">
-                                       ООО “Плохие поставщики”
-                                   </span>
-                                    <a href="#" class="link link-sm">Перейти на сайт</a>
-                                </p>
-                                <p class="black-card__label">Причина:</p>
-                                <p class="black-card__text">
-                                    Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими,
-                                    из-за чего получили распространение в капитальном строительстве. Высокая. Тяжёлые
-                                    бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за
-                                    чего получили распространение в капитальном строительстве. Высокая. Тяжёлые бетоны
-                                    обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего
-                                    получили распространение в капитальном строительстве. Высокая. Тяжёлые бетоны
-                                    обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего
-                                    получили распространение в капитальном строительстве. Высокая.
-                                </p>
-                                <a href="#" class="link link-sm">Подробнее</a>
-                            </div>
-
-                        </div>
-                        <div class="additional__card additional__wrapper">
-                            <div class="black-card">
-                                <p class="black-card__date">
-                                    Опубликовано <strong>24.05.2021 в 10:30</strong>
-                                </p>
-                                <p class="black-card__info">
-                                   <span class="h4 black-card__name">
-                                       ООО “Плохие поставщики”
-                                   </span>
-                                    <a href="#" class="link link-sm">Перейти на сайт</a>
-                                </p>
-                                <p class="black-card__label">Причина:</p>
-                                <p class="black-card__text">
-                                    Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими,
-                                    из-за чего получили распространение в капитальном строительстве. Высокая. Тяжёлые
-                                    бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за
-                                    чего получили распространение в капитальном строительстве. Высокая. Тяжёлые бетоны
-                                    обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего
-                                    получили распространение в капитальном строительстве. Высокая. Тяжёлые бетоны
-                                    обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего
-                                    получили распространение в капитальном строительстве. Высокая.
-                                </p>
-                                <a href="#" class="link link-sm">Подробнее</a>
-                            </div>
-
-                        </div>
                     </div>
 
                 </div>
