начал собирать eckeub

--- a/src/blacklist-company.html
+++ b/src/blacklist-company.html
@@ -299,9 +299,9 @@
                 <span class="breadcrumbs__text">Черный список</span>
             </li>
         </ul>
-        <div class="additional blacklist">
-            <div class="row">
-                <div class="additional__sidebar col-3">
+        <div class="additional">
+            <div class="additional__container">
+                <div class="additional__sidebar">
                     <div class="personal-account">
                         <div class="personal-account__head">
                             Личный кабинет
@@ -353,7 +353,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="additional__content col-9">
+                <div class="additional__content">
                     <div class="additional__wrapper">
                         <h4 class="h4">Отзыв о  ООО “ Плохие поставщики”</h4>
                         <p class="additional__date">Опубликовано <strong>24.05.2021 в 10:30</strong></p>
