--- a/src/add-to-blacklist.html
+++ b/src/add-to-blacklist.html
@@ -299,9 +299,9 @@
                 <span class="breadcrumbs__text">Черный список</span>
             </li>
         </ul>
-        <div class="additional blacklist">
-            <div class="row">
-                <div class="additional__sidebar col-3">
+        <div class="additional">
+            <div class="additional__container">
+                <div class="additional__sidebar">
                     <div class="personal-account">
                         <div class="personal-account__head">
                             Личный кабинет
@@ -353,7 +353,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="additional__content col-9">
+                <div class="additional__content">
                     <div class="additional__wrapper">
                         <h2 class="h2">Добавить компанию в черный список</h2>
 
