--- a/src/services.html
+++ b/src/services.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Черный список</title>
+    <title>Услуги</title>
 </head>
 
 <body class="page transition-off">
@@ -354,117 +354,66 @@
                     </div>
                 </div>
                 <div class="additional__content">
-                    <div class="additional__wrapper">
-                        <h2 class="h2">Черный список</h2>
-                        <p>В данном разделе портала STROIM100.RU представлены недобросовестные поставщики и покупатели
-                            строительных материалов, не исполняющие свои обязательства по договорам поставки (покупки) в
-                            той или иной мере, обманывающие своих покупателей (поставщиков).</p>
-                        <p>Информация имеет документальное подтверждение.</p>
-                        <p>Если у Вас есть сведения о мошенничестве и недобросовестности поставщиков или покупателей,
-                            сообщите нам:</p>
-                        <a href="#" class="btn btn-primary additional__btn">
-                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                 xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="9" cy="9" r="8.1" stroke="white" stroke-width="1.8"/>
-                                <line x1="5.9" y1="9.1" x2="12.1" y2="9.1" stroke="white" stroke-width="1.8"
-                                      stroke-linecap="round"/>
-                                <line x1="9.1" y1="12.1" x2="9.1" y2="5.9" stroke="white" stroke-width="1.8"
-                                      stroke-linecap="round"/>
-                            </svg>
-                            <span>Добавить компанию в черный список</span>
-                        </a>
-                        <form class="additional__form">
-                            <h4 class="h4">Список компаний</h4>
-                            <label class="search-input">
-                                <input type="text" class="form-control base-input search-input__field"
-                                       placeholder="Поиск">
-                                <button class="btn search-input__btn">
-                                    <img src="img/icon-search-gray.svg" alt="">
-                                </button>
-                            </label>
-                        </form>
-                    </div>
-                    <div class="additional__list">
-                        <div class="additional__card additional__wrapper">
-                            <div class="black-card">
-                                <p class="black-card__date">
-                                    Опубликовано <strong>24.05.2021 в 10:30</strong>
-                                </p>
-                                <p class="black-card__info">
-                                   <span class="h4 black-card__name">
-                                       ООО “Плохие поставщики”
-                                   </span>
-                                    <a href="#" class="link link-sm">Перейти на сайт</a>
-                                </p>
-                                <p class="black-card__label">Причина:</p>
-                                <p class="black-card__text">
-                                    Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими,
-                                    из-за чего получили распространение в капитальном строительстве. Высокая. Тяжёлые
-                                    бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за
-                                    чего получили распространение в капитальном строительстве. Высокая. Тяжёлые бетоны
-                                    обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего
-                                    получили распространение в капитальном строительстве. Высокая. Тяжёлые бетоны
-                                    обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего
-                                    получили распространение в капитальном строительстве. Высокая.
-                                </p>
-                                <a href="#" class="link link-sm">Подробнее</a>
-                            </div>
 
-                        </div>
-                        <div class="additional__card additional__wrapper">
-                            <div class="black-card">
-                                <p class="black-card__date">
-                                    Опубликовано <strong>24.05.2021 в 10:30</strong>
-                                </p>
-                                <p class="black-card__info">
-                                   <span class="h4 black-card__name">
-                                       ООО “Плохие поставщики”
-                                   </span>
-                                    <a href="#" class="link link-sm">Перейти на сайт</a>
-                                </p>
-                                <p class="black-card__label">Причина:</p>
-                                <p class="black-card__text">
-                                    Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими,
-                                    из-за чего получили распространение в капитальном строительстве. Высокая. Тяжёлые
-                                    бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за
-                                    чего получили распространение в капитальном строительстве. Высокая. Тяжёлые бетоны
-                                    обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего
-                                    получили распространение в капитальном строительстве. Высокая. Тяжёлые бетоны
-                                    обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего
-                                    получили распространение в капитальном строительстве. Высокая.
-                                </p>
-                                <a href="#" class="link link-sm">Подробнее</a>
-                            </div>
-
-                        </div>
-                        <div class="additional__card additional__wrapper">
-                            <div class="black-card">
-                                <p class="black-card__date">
-                                    Опубликовано <strong>24.05.2021 в 10:30</strong>
-                                </p>
-                                <p class="black-card__info">
-                                   <span class="h4 black-card__name">
-                                       ООО “Плохие поставщики”
-                                   </span>
-                                    <a href="#" class="link link-sm">Перейти на сайт</a>
-                                </p>
-                                <p class="black-card__label">Причина:</p>
-                                <p class="black-card__text">
-                                    Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими,
-                                    из-за чего получили распространение в капитальном строительстве. Высокая. Тяжёлые
-                                    бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за
-                                    чего получили распространение в капитальном строительстве. Высокая. Тяжёлые бетоны
-                                    обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего
-                                    получили распространение в капитальном строительстве. Высокая. Тяжёлые бетоны
-                                    обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего
-                                    получили распространение в капитальном строительстве. Высокая.
-                                </p>
-                                <a href="#" class="link link-sm">Подробнее</a>
-                            </div>
-
-                        </div>
+                    <div class="additional__article">
+                        <h2 class="h2">Услуги</h2>
+                        <h4 class="h4 additional__caption">Почему Вам это нужно?</h4>
+                        <p class="additional__service"><strong>Высокая посещаемость</strong> – ежемесячно более 120 000 посетителей портала STROIM100.RU (60% новых), более 1 000 000 просмотров страниц.</p>
+                        <p class="additional__service"><strong>Эргономичность</strong> – удобная, интуитивно понятная система навигации портала, позволяет в 3 – 4 клика переходить на страницу с ценами ссылками и телефонами Поставщиков.</p>
+                        <p class="additional__service"><strong>Конверсионность</strong> – авторизованные пользователи портала STROIM100.RU ежемесячно получают от 300 до 1500 переходов покупателей на свои сайты. При этом стоит отметить: конверсионность заключается в том, что покупатель уже нашёл необходимый ему сортамент проката, его размер вид стали, увидел Вашу цену и совершает переход для «связи» с потенциальным поставщиком. Либо звонит в Ваш офис, так как Ваш телефон находится напротив Вашей цены.</p>
+                        <p class="additional__service"><strong>Удобство</strong> –  Вам не нужно ежедневно править информацию о ценах на нашем портале, достаточно изменить цены на Вашем сайте, или загрузить прайс-лист в личный кабинет, остальное сделает «робот».</p>
+                        <p class="additional__service"><strong>Заявки и Тендеры</strong> – авторизированный пользователь ежедневно в «онлайн режиме» получает уведомления о поступление заявки от покупателя и объявление нового тендера на поставку строительных материалов, учувствует в торгах и аукционах.</p>
+                        <p class="additional__service"><strong>Экономичность</strong> – невысокая стоимость размещения прайс-листа в сравнении с высокой конверсией является основным преимуществом нашего портала.</p>
+                        <p class="additional__service"><strong>Баннерная Реклама</strong> – эффективный инструмент управления имиджем Вашей компании и получения новых покупателей Вашей продукции.</p>
+                        <p class="additional__service"><strong>Пакет услуг</strong> – Организация рекламной компании в «Яндекс Директ» и «Google АDwords».  Именно узкая специализация по интернет рекламе в строительной отрасли позволит нашим специалистам организовать или модернизировать Вашу рекламную компанию, расширив её до 100 тысяч активных объявлений, значительно увеличив конверсию и уменьшив бюджет.</p>
+                        <p class="additional__service"><strong>География</strong> – более 100 городов РФ и Стран СНГ. Высокий целевой трафик.</p>
+                        <p class="additional__service"><strong>Сортамент</strong> – более 100 видов сортамента, более 20 000 типов и размеров продукции строительной отрасли.</p>
                     </div>
 
+                    <div class="additional__article">
+                        <h4 class="h4 additional__caption">Ваши преимущества при сотрудничестве с STROIM100.RU</h4>
+                        <p class="additional__service"><strong>Аргумент 1.</strong> – Значительная экономия расходов на Рекламы Вашей продукции.</p>
+                        <p class="additional__service"><strong>Просто сравните это:</strong></p>
+                        <div class="table table--bordered additional__wrapper">
+                            <div class="table__head">
+                                <div class="table__col table__col--name">
+                                    Стоимость Классической Интернет рекламы
+                                </div>
+                                <div class="table__col table__col--conversion">
+                                    Конверсия
+                                </div>
+                                <div class="table__col table__col--name">
+                                    Стоимость размещения строим100
+                                </div>
+                                <div class="table__col table__col--call-office">
+                                    Конверсия Звонок&nbsp;в&nbsp;офис
+                                </div>
+                            </div>
+                            <div class="table__body">
+                                <div class="table__row">
+                                    <div class="table__col table__col--name">
+                                        1000 *150= 45 000 руб./мес.
+                                    </div>
+                                    <div class="table__col table__col--conversion">
+                                        1000*5%=50 звонков
+                                    </div>
+                                    <div class="table__col table__col--name">
+                                        <div>3500 руб./мес. = это</div>
+                                        <div><strong>в 42 раз дешевле</strong></div>
+                                    </div>
+                                    <div class="table__col table__col--call-office">
+                                        <div>1000*30%=300&nbsp;это</div>
+                                        <div><strong>в 6 раза больше</strong></div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <p><strong>Например:</strong></p>
+                        <p class="additional__service">Средняя стоимость клика (перехода на Ваш сайт) в рекламных сетях от 30 до 500 руб./клик. При этом покупатель не видит цену, не знает размер и марку стали, и переходит, что бы узнать эту информацию. Согласитесь, что из 100 переходов на Ваш сайт звонком заканчивается не более 5-ти.</p>
+                        <p class="additional__service">Совсем другая ситуация с переходом на Ваш сайт с портала STROIM100.RU – это переход покупателя, который уже узнал Вашу цену и готов купить у Вас выбранный им вид строительных материалов.</p>
+                    </div>
                 </div>
 
             </div>
