закончил страницы сервисы и компания из чёрного списка с блоком комментариев

--- a/src/services.html
+++ b/src/services.html
@@ -374,7 +374,7 @@
                         <h4 class="h4 additional__caption">Ваши преимущества при сотрудничестве с STROIM100.RU</h4>
                         <p class="additional__service"><strong>Аргумент 1.</strong> – Значительная экономия расходов на Рекламы Вашей продукции.</p>
                         <p class="additional__service"><strong>Просто сравните это:</strong></p>
-                        <div class="table table--bordered additional__wrapper">
+                        <div class="table table--bordered additional__wrapper additional__service">
                             <div class="table__head">
                                 <div class="table__col table__col--name">
                                     Стоимость Классической Интернет рекламы
@@ -410,10 +410,146 @@
                             </div>
                         </div>
 
-                        <p><strong>Например:</strong></p>
+                        <p class="additional__service-caption"><strong>Например:</strong></p>
                         <p class="additional__service">Средняя стоимость клика (перехода на Ваш сайт) в рекламных сетях от 30 до 500 руб./клик. При этом покупатель не видит цену, не знает размер и марку стали, и переходит, что бы узнать эту информацию. Согласитесь, что из 100 переходов на Ваш сайт звонком заканчивается не более 5-ти.</p>
                         <p class="additional__service">Совсем другая ситуация с переходом на Ваш сайт с портала STROIM100.RU – это переход покупателя, который уже узнал Вашу цену и готов купить у Вас выбранный им вид строительных материалов.</p>
+                        <p class="additional__service-caption"><strong>Аргумент 2.</strong> - Размещение прайс-листа с ежедневным автоматическим обновлением.</p>
+                        <p class="additional__service">Разместите прайс-лист на портале STROIM100.RU и ежемесячно Вы будете получать от 300 до 1500 и более, переходов покупателей на Ваш сайт с высокой конверсией.</p>
+                        <p class="additional__service">Потенциальный покупатель видит необходимый ему вид строительных материалов (размер, сталь, ГОСТ), видит Вашу цену и совершает переход на Ваш сайт, чтобы купить нужный ему вид строительных материалов, либо просто звонит в Ваш офис, так как Ваши контакты представлены  в свободном доступе.</p>
+                        <p class="additional__service"><em>Рисунок 1. - пример размещения прайс-листа:</em></p>
+                        <div class="additional__service">
+                            <img src="img/services/image-1.jpg" alt="">
+                        </div>
+                        <p class="additional__service-caption"><strong>Аргумент 3.</strong> – Целевая аудитория строительного портала STROIM100.RU.</p>
+                        <p class="additional__service">Ежедневно STROIM100.RU просматривают несколько тысяч посетителей, при этом почти 70% новые потенциальные покупатели. Отказы от информации, представленной на нашем портале, составляют всего 5-6%.</p>
+                        <p class="additional__service">Вы будете подписаны на автоматическое оповещение о появлении новых Заявок и Тендеров по выбранному вами виду строительных материалов в интересующих Вас Регионах.</p>
+                        <p class="additional__service"><em>Рисунок 2. - пример заявок на поставку строительных материалов:</em></p>
+
+                        <div class="additional__picture additional__service">
+                            <div class="additional__picture-content">
+                                <em class="additional__picture-text">Вы будете подписаны на рассылку Заявок и Тендеров по выбранному вами виду строительных материалов из интересующих Вас Регионов</em>
+                                <em class="additional__picture-text">Ежедневно более 100 заявок покупателей и Тендеров на строительные материалы</em>
+                            </div>
+                            <div class="additional__picture-img">
+                                <img src="img/services/image-2.jpg" alt="">
+                            </div>
+                        </div>
+                        <p class="additional__service-caption"><strong>Аргумент 5.</strong> – Система Рейтингов Поставщиков Стройматериалов.
+                        </p>
+                        <p class="additional__service">В зависимости от выбранного Вами тарифа, Вам будет присвоен Рейтинг Авторизованного Пользователя портала STROIM100.RU, что повысит степень доверия Вашего потенциального покупателя к Вашей компании.</p>
+                        <p class="additional__service"><em>Рисунок 3 - пример ответов на заявки (личный кабинет покупателя):</em></p>
+                        <div class="additional__service">
+                            <img src="img/services/image-3.jpg" alt="">
+                        </div>
+                        <div class="additional__service">
+                            <div class="additional__service-rating">
+                                <strong>Рейтинг</strong>
+                                <div class="additional__service-stars">
+                                    <img src="img/star.svg" alt="">
+                                </div>
+                                <p> - Авторизованный Поставщик</p>
+                            </div>
+                            <div class="additional__service-rating">
+                                <strong>Рейтинг</strong>
+                                <div class="additional__service-stars">
+                                    <img src="img/star.svg" alt="">
+                                    <img src="img/star.svg" alt="">
+                                </div>
+                                <p> - Поставщик с тарифом «Бизнес»</p>
+                            </div>
+                            <div class="additional__service-rating">
+                                <strong>Рейтинг</strong>
+                                <div class="additional__service-stars">
+                                    <img src="img/star.svg" alt="">
+                                    <img src="img/star.svg" alt="">
+                                    <img src="img/star.svg" alt="">
+                                </div>
+                                <p> - Поставщик с тарифом «Премиум»</p>
+                            </div>
+                        </div>
+
+                        <p class="additional__service-caption"><strong>Результат сотрудничества с порталом STROIM100.RU</strong></p>
+                        <ul class="additional__list additional__service">
+                            <li>- посещение Вашего сайта новыми покупателями строительных материалов, которые уже ознакомились с Вашей ценой</li>
+                            <li> - прямые звонки покупателей со страниц портала STROIM100.RU</li>
+                            <li> - ежедневное получение заказов на поставку и участие в тендерах на строительных материалов</li>
+                            <li>- получение ссылки на Ваш сайт с STROIM100.RU (улучшает выдачу  Вашего сайта в поисковых системах)</li>
+                            <li>- экономия денежных средств на рекламу, в сравнении с другими вариантами рекламы</li>
+                            <li>- повышение Рейтинга Вашего предприятия на рынке поставщиков стройматериалов.</li>
+                        </ul>
+                        <p class="additional__service"><em>Рисунок 4. - пример статистики переходов на сайты клиентов портала STROIM100.RU:</em></p>
+                        <div class="additional__service">
+                            <img src="img/services/image-4.jpg" alt="">
+                        </div>
+                        <p class="additional__service">Ежедневно наши специалисты отслеживают трафик и прилагают максимум усилий для повышения его качества.</p>
+
+
+                        <p class="additional__service-caption"><strong>Аргумент 6. – Профессиональная реклама строительных материалов в «Яндекс Директ» и «Google AdWords».</strong></p>
+                        <p class="additional__service">Так же просим обратить внимание, что Вы можете заказать через нас полный спектр услуг по Рекламе в поисковых системах Яндекс и Google.</p>
+                        <p class="additional__service">Мы являемся сертифицированным агентством Яндекса, поэтому стоимость услуг по оформлению Вашей рекламы нам оплачивает Яндекс в виде комиссионных и стоимость клика, которую Вы оплачиваете,  является не изменой при работе с нами или напрямую с Яндекс.</p>
+                        <p class="additional__service">Наши специалисты бесплатно и на профессиональном уровне сделают работу Вашего штатного специалиста, предоставив Вам полный доступ статистики кампании.</p>
+                        <p class="additional__service"><em>Рисунок 5. - пример статистики расходов в «Яндекс Директ» на рекламу строительных материалов:</em></p>
+                        <div class="additional__service">
+                            <img src="img/services/image-5.jpg" alt="">
+                        </div>
+                        <p class="additional__service">Именно узкая специализация по интернет рекламе в строительной отрасли позволит нашим специалистам в максимально короткий срок (2-3 дня) запустить или модернизировать <strong>Вашу рекламную компанию, расширив её до 100 тысяч активных объявлений,</strong> значительно увеличив конверсию и уменьшив бюджет.</p>
+
+
+
                     </div>
+                    <div class="additional__article">
+                        <h4 class="h4 additional__caption">Специальное предложение для производителей строительных материалов.</h4>
+                        <p class="additional__service">В целях привлечения большего числа покупателей и повышения статуса для производителей строительных материалов наша система предлагает замену Рейтинга « » на примечание «Завод».</p>
+                    </div>
+
+                    <div class="additional__article">
+                        <h4 class="h4 additional__caption">Для крупных продавцов и производителей строительных материалов</h4>
+                        <p class="additional__service-caption">Для предприятий имеющих обширную филиальную сеть, для поставщиков редких видов проката а так же для производителей желающих географически  расширить рынок сбыта своей продукции, предлагаем специальную систему скидок:</p>
+                        <p class="additional__service additional__service--red"><strong>При размещении прайс-листа  более чем в 10-ти регионах – скидка до 75% от базовой стоимости.</strong></p>
+                    </div>
+
+                    <div class="additional__article">
+                        <h4 class="h4 additional__caption">Как авторизоваться на портале STROIM100.RU</h4>
+                        <p class="additional__service">Для авторизации в качестве поставщика строительных материалов на портале STROIM100.RU просим Вас направить письмо на адрес info@stroim100.ru  следующую информацию:</p>
+                        <ul class="additional__list additional__service">
+                            <li>- реквизиты  Вашей организации</li>
+                            <li>- адрес Вашего сайта (если имеется)</li>
+                            <li>- укажите адрес Вашего склада, для формирования карты строительных баз Вашего региона</li>
+                            <li>- адрес ссылки на скачивание прайс-листа в формате Excel (при наличии ссылки, обновление цен автоматическое дважды в день)</li>
+                            <li>-  если прайс-лист не размещён на Вашем сайте, прикрепите Ваш прайс-лист в формате Excel к данному письму (в этом случает обновление цен, по Вашему требованию)</li>
+                            <li>- направьте список email адресов Ваших менеджеров, для авторизации их доступа к Тендерам и Заявкам покупателей</li>
+                            <li>- если у Вас нет интернет сайта, мы сформируем для Вас специальную интернет страницу Вашей организации, для этого нам необходимо получить от Вас описание основных видов Вашей деятельности и копии регистрационных документов.</li>
+                        </ul>
+                        <p class="additional__service">После размещения прайс-листа Вам будет открыт полный доступ к Заявкам покупателей
+                            Так же Вы будете получать прямые  звонки покупателей Ваш офис и переходы на Ваш сайт со страниц портала STROIM100.RU с высокой конверсией, так как посетитель портала уже выбрал необходимый ему вид строительных материалов, узнал Вашу цену и перешёл на Ваш сайт, чтобы совершить покупку.</p>
+                    </div>
+
+                    <div class="additional__article">
+                        <h4 class="h4 additional__caption">Стоимость размещения прайс-листа (неограниченное кол-во позиций) с ежедневным автоматическим обновлением.</h4>
+                        <p class="additional__service">- Размещение прайс-листа + доступ к заявкам покупателей (1 регион) - 3500 руб./мес.
+                        </p>
+                    </div>
+
+                    <div class="additional__article">
+                        <h4 class="h4 additional__caption">Скидки на услуги stroim100.ru:</h4>
+                        <ul class="additional__list additional__service">
+                            <li>- при оплате за 3 месяца 10% (рейтинг   - Авторизованный пользователь)</li>
+                            <li>- при оплате 6 месяцев 20%    (рейтинг   - Тариф Бизнес)</li>
+                            <li>- при оплате 12 месяцев 30%  (рейтинг   - Тариф Премиум)</li>
+                            <li>- размещение прайс-листа более чем в 10-ти регионах 75% от базовой стоимости</li>
+                        </ul>
+                        <p class="additional__service">Более подробную информацию можно найти на портале STROIM100.RU в разделе «Реклама».</p>
+                    </div>
+
+
+                    <div class="additional__signature">
+                        <p>Спасибо, что Вы с нами!</p>
+                        <p>С уважением,</p>
+                        <p>Администрация единого строительного портала STROIM100.RU</p>
+                        <p>тел: 8 (499) 270 58 45, 8 800 333 18 40.</p>
+                        <p> сот: +7 916 781 40 42</p>
+                    </div>
+
                 </div>
 
             </div>
