--- a/src/blacklist-company.html
+++ b/src/blacklist-company.html
@@ -440,6 +440,7 @@
                                 <label class="materil-group">
                                     <span class="materil-group__label">Комментарий*</span>
                                     <textarea class="form-control base-input materil-group__input materil-group__textarea"></textarea>
+                                    <span class="materil-group__label-backdrop"></span>
                                 </label>
                                 <label class="materil-group">
                                     <input type="checkbox" name="check-one" value="check-one" />
