--- a/src/contacts.html
+++ b/src/contacts.html
@@ -356,7 +356,7 @@
                 <div class="additional__content">
                     <h2 class="h2">Контакты</h2>
                     <p class="additional__service additional__service--mb-0">Более 100 городов РФ и стран СНГ.</p>
-                    <p class="additional__service additional__service--mb-0">Отправьте заявку на info@metal100.ru и Вы получите прямой ответ от поставщиков Вашего региона.</p>
+                    <p class="additional__service additional__service--mb-0">Отправьте заявку на <a href="mailto:info@metal100.ru">info@metal100.ru</a> и Вы получите прямой ответ от поставщиков Вашего региона.</p>
 
                    <div class="additional__form">
                         <p class="additional__form-label">
