--- a/src/price-list.html
+++ b/src/price-list.html
@@ -355,11 +355,15 @@
                 </div>
                 <div class="additional__content">
                     <h2 class="h2">Размещение прайс-листов</h2>
-                    <h4 class="additional__service h4"><strong>Целевая аудитория</strong></h4>
+                    <p class="additional__caption h4">
+                        <strong>Целевая аудитория</strong>
+                    </p>
                     <p class="additional__service">Для размещения Вашего ценовое предложение (прайс-лист) на интернет портале stroim100.ru просим Вас отправить на почту info@stroim100.ru : Ваш прайс-лист, адрес Вашего сайта и карту партнера (реквизиты). Обновление ценового предложения будет производиться по Вашему требованию. Если на Вашем сайте имеется прайс-лист с обновляемой ценой, то обновление ценового предложения будет производиться ежедневно в автоматическом режиме.</p>
 
                     <div class="additional__section">
-                        <h4 class="additional__service h4"><strong>Прайс-лист от 01.01.2018г. на размещение ценового предложения (прайс-листов).</strong></h4>
+                        <p class="additional__caption h4">
+                            <strong>Прайс-лист от 01.01.2018г. на размещение ценового предложения (прайс-листов).</strong>
+                        </p>
                         <p class="additional__service"><strong>Москва, Санкт-Петербург</strong></p>
                         <div class="table table--bordered">
                             <div class="table__head">
