--- a/src/password-recovery-1.html
+++ b/src/password-recovery-1.html
@@ -289,7 +289,12 @@
                 Восстановление пароля
             </h2>
             <div class="info-block">
-                На ваш адрес электронной почты будет отправлено письмо с паролем
+                <div class="info-block__icon">
+                    <img src="img/icon-info.svg" alt="">
+                </div>
+                <div class="info-block__text">
+                    На ваш адрес электронной почты будет отправлено письмо с паролем
+                </div>
             </div>
             <form action="" class="recovery__form">
                 <label class="materil-group recovery__field">
@@ -300,7 +305,6 @@
                 <button type="submit" class="btn btn-primary recovery__btn">Отправить письмо</button>
             </form>
         </div>
-
     </div>
 
 
