--- a/src/tender-bidding.html
+++ b/src/tender-bidding.html
@@ -308,28 +308,37 @@
 
         <div class="tender-page">
 
-            <div class="tender-page__row">
-                <div class="tender-page__content">
+            <div class="tender-page__content">
+                <h3 class="tender-page__text">
+                    Тендер на поставку отводы, соеденители и прочее
+                </h3>
+                <div class="tender-page__row">
                     <h4 class="tender-page__text">
-                        Тендер на поставку отводы, соеденители и прочее
+                        <strong>Заказчик</strong>
                     </h4>
-                    <p class="tender-page__text tender-page__text--grey tender-page__text--sm">
-                        Период торгов:
-                        <strong>с 10:40 30 октября 2020 г.</strong>
-                        по
-                        <strong>17:00 8 ноября 2019 г.</strong>
-                    </p>
-                    <p class="tender-page__text tender-page__text--grey tender-page__text--sm">
-                        <span>Статус:</span>
-                        <span class="tender-page__text--green"><strong>Идут торги</strong></span>
-                    </p>
+                    <div class="tender-page__info">
+                        <p class="tender-page__info-row">
+                            <span class="tender-page__info-grey">Контактное лицо:</span>&nbsp;
+                            <span>Иван Иванов</span>
+                        </p>
+                        <p class="tender-page__info-row">
+                            <span class="tender-page__info-grey">Ищет поставщика в регионах:</span>&nbsp;
+                            <span>Москва, Новосибирск</span>
+                        </p>
+                        <p class="tender-page__info-row">
+                            <span class="tender-page__info-grey">Организация:</span>&nbsp;
+                            <img src="img/lock.svg" alt="">&nbsp;
+                            <span>Москва, Новосибирск</span>
+                        </p>
+                        <p class="tender-page__info-row">
+                            <span class="tender-page__info-grey">Телефон:</span>&nbsp;
+                            <img src="img/lock.svg" alt="">&nbsp;
+                            <span>Доступно после овтета на тендер</span>
+                        </p>
+                    </div>
                 </div>
-                <div class="tender-page__sidebar">
-                    <div class="status status--open">Открытый конкурс</div>
-                </div>
-            </div>
-            <div class="tender-page__row">
-                <div class="tender-page__content">
+
+                <div class="tender-page__row">
                     <h4 class="tender-page__text">
                         <span class="tender-page__text--grey">Лот 1:</span>
                         <span>Тендер на поставку отводы, соеденители и прочее</span>
@@ -341,11 +350,8 @@
                         тяжёлых бетонов можно отнести долговечность, высокую прочность, твёрдость и морозостойкость.
                     </p>
                 </div>
-                <div class="tender-page__sidebar"></div>
-            </div>
 
-            <div class="tender-page__row">
-                <div class="tender-page__content">
+                <div class="tender-page__row">
                     <div class="table">
                         <div class="table__head">
                             <div class="table__col table__col--num">
@@ -430,48 +436,199 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
-                <div class="tender-page__sidebar">
-                    <div class="customer-info">
-                        <div class="customer-info__head">
-                            <p class="customer-info__name">
-                                Заказчик
-                            </p>
+
+                <div class="tender-page__section tender-page__section--lg js-take-part-info">
+                    <div class="info-block">
+                        <div class="info-block__icon">
+                            <img src="img/icon-info.svg" alt="">
                         </div>
-                        <div class="customer-info__row">
-                            <p class="customer-info__label">
-                                Контактное лицо
-                            </p>
-                            <p class="customer-info__name">
-                                Иван Иванов
-                            </p>
+                        <p class="info-block__text">
+                            <em>Настоящее информационное сообщение, ни при каких обстоятельствах не может расцениваться как публичная оферта. Соответственно, Заказчик, не несет никакой ответственности за отказ заключить договор с лицами, заявившими о заинтересованности.</em>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="tender-page__section">
+                    <div class="info-block">
+                        <div class="info-block__icon info-block__icon--large">
+                            <img src="img/icon-avatar.svg" alt="">
                         </div>
-                        <div class="customer-info__row">
-                            <p class="customer-info__label">
-                                Ищет поставщика в регионах
-                            </p>
-                            <p class="customer-info__name">
-                                Москва, Новосибирск
-                            </p>
-                        </div>
-                        <div class="customer-info__row">
-                            <p class="customer-info__label">
-                                Организация
-                            </p>
-                            <p class="customer-info__name">
-                                Доступно после ответа на тендер
-                            </p>
-                        </div>
-                        <div class="customer-info__row">
-                            <p class="customer-info__label">
-                                Телефон
-                            </p>
-                            <p class="customer-info__name">
-                                Доступно после ответа на тендер
-                            </p>
+                        <div class="info-block__text">
+                            <h3 class="info-block__caption">Здравствуйте, Гость</h3>
+                            <p><strong>Для того чтобы учавствовать в торгах введите Ваш логин и пароль.</strong></p>
+                            <em class="info-block__note">Участие в торгах доступно только зарегистрированным пользователи,
+                                <a href="">пройдите регистрацию</a>
+                                в случае если Вы еще этого не сделали.</em>
                         </div>
                     </div>
                 </div>
+
+                <div class="tender-page__section tender-page__section--lg js-take-part-form">
+                    <form action="" class="tender-page__form tender-page__form--lg">
+                        <h4 class="tender-page__form-label">Ваше предложение</h4>
+                        <label class="materil-group">
+                            <span class="materil-group__label">Общая стоимость лота*</span>
+                            <input type="text" class="form-control base-input materil-group__input">
+                        </label>
+                        <label class="materil-group">
+                            <span class="materil-group__label">Ваш комментарий</span>
+                            <input type="text" class="form-control base-input materil-group__input">
+                        </label>
+                        <label class="materil-group">
+                            <span class="materil-group__label">Стоимость доставки</span>
+                            <input type="text" class="form-control base-input materil-group__input">
+                        </label>
+
+                        <label class="materil-group tender-page__row">
+                            <input type="checkbox" name="check-one" value="check-one" />
+                            <span>Отметьте, если доставка включена в общую стоимость</span>
+                        </label>
+
+                        <div class="materil-group">
+                            <p class="tender-page__text">
+                                Просим отправить Ваше предложение в виде счёта к оплате:
+                            </p>
+                            <div class="file-reader">
+                                <div class="file-reader__return">
+                                    <span class="file-reader__return-text"></span>
+                                    <svg class="file-reader__icon-close" width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M19.3848 2.82857L3.82843 18.3849C3.4381 18.7752 2.64615 18.6168 2.06066 18.0314C1.47517 17.4459 1.31678 16.6539 1.70711 16.2636L17.2635 0.707247C17.6538 0.316923 18.4457 0.475314 19.0312 1.0608C19.6167 1.64629 19.7751 2.43824 19.3848 2.82857Z" fill="#001D3A"/>
+                                        <path d="M16.5562 18.3848L0.999849 2.82843C0.609525 2.4381 0.767916 1.64615 1.3534 1.06066C1.93889 0.475174 2.73084 0.316782 3.12117 0.707107L18.6775 16.2635C19.0678 16.6538 18.9095 17.4457 18.324 18.0312C17.7385 18.6167 16.9465 18.7751 16.5562 18.3848Z" fill="#001D3A"/>
+                                    </svg>
+                                </div>
+
+                                <input class="file-reader__input" id="my-file" type="file">
+                                <label tabindex="0" for="my-file" class="file-reader__label">
+                                    <svg class="file-reader__icon-clip" width="22" height="24" viewBox="0 0 22 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M12.6485 1.5L2.52475 12.6881C1.52512 13.792 0.978705 15.254 1.00064 16.7664C1.02257 18.2787 1.61112 19.7232 2.64232 20.7955C3.70234 21.8871 5.13724 22.5 6.63304 22.5C8.12884 22.5 9.56374 21.8871 10.6238 20.7955L19.3759 11.7017C19.7322 11.3351 20.0149 10.8993 20.2078 10.4192C20.4007 9.93924 20.5 9.42453 20.5 8.9047C20.5 8.38487 20.4007 7.87017 20.2078 7.39016C20.0149 6.91015 19.7322 6.47431 19.3759 6.10767C18.6583 5.36671 17.6858 4.95054 16.6719 4.95054C15.658 4.95054 14.6855 5.36671 13.9679 6.10767L7.43641 12.8638C7.04861 13.2545 6.81409 13.7796 6.77792 14.3383C6.74175 14.897 6.90649 15.4498 7.24047 15.8905C7.66534 16.2389 8.2004 16.4111 8.74135 16.3737C9.28231 16.3362 9.79039 16.0917 10.1666 15.6878L15.3917 10.283" stroke="#001D3A" stroke-opacity="0.9" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                    <div class="file-reader__loader loader loader--dark">Loading...</div>
+                                    <span class="file-reader__input-text">Выбрать файлы</span>
+                                </label>
+                            </div>
+                        </div>
+
+
+                    </form>
+                    <div class="tender-page__section tender-page__section--lg">
+                        <div class="info-block">
+                            <div class="info-block__icon">
+                                <img src="img/icon-info.svg" alt="">
+                            </div>
+                            <p class="info-block__text">
+                                <em>Победителем конкурсной процедуры (тендера) признается тот Участник, чья заявка, по мнению Организатора процедуры, занимает первое месте в списке, по степени предпочтительности (наиболее близкого соответствия к запросу) для Организатора процедуры.</em>
+                                <em>При определении победителя конкурсной процедуры используются критерии оценки, изложенные в документации о закупке. Организатор тендера своевременно направляет выигравшему Участнику уведомление о признании его Победителем. В случае отказа победителя конкурсной процедуры от подписания договора, право на заключение которого являлось предметом конкурсной процедуры, Организатор имеет право имеет право заключить договор с Участником процедуры, занявшим второе место, затем – третье место и так далее.</em>
+                            </p>
+                        </div>
+                    </div>
+
+                    <label class="tender-page__section">
+                        <button class="btn btn-primary" type="submit">Отправить предложение</button>
+                    </label>
+                </div>
+
+
+                <!-- TODO: скрыть если зарегистрирован-->
+<!--                <div class="tender-page__section">-->
+<!--                    <form action="" class="tender-page__form">-->
+<!--                        <h4 class="tender-page__form-field">-->
+<!--                            Вход-->
+<!--                        </h4>-->
+<!--                        <label class="materil-group tender-page__form-field">-->
+<!--                            <span class="materil-group__label">Email</span>-->
+<!--                            <input type="text" class="form-control base-input materil-group__input">-->
+<!--                            <div class="materil-group__error-text">Клиента с такой электронной почтой не существует</div>-->
+<!--                        </label>-->
+<!--                        <label class="materil-group tender-page__form-field">-->
+<!--                            <span class="materil-group__label">Пароль</span>-->
+<!--                            <input type="text" class="form-control base-input materil-group__input">-->
+<!--                        </label>-->
+<!--                        <button type="submit" class="btn btn-primary recovery__btn">Войти</button>-->
+<!--                    </form>-->
+<!--                </div>-->
+
+            </div>
+            <div class="tender-page__sidebar">
+                <div class="tender-page__row">
+                    <div class="status status--open">Открытый конкурс</div>
+                </div>
+                <div class="tender-page__row">
+                    <div class="customer-info">
+                        <div class="customer-info__head">
+                            <p class="customer-info__title">
+                                Тендер №6933 от 06.08.2021 10:13
+                            </p>
+                        </div>
+                        <div class="customer-info__row">
+                            <p class="customer-info__label">
+                                Период торгов:
+                            </p>
+                            <p class="customer-info__name">
+                                с
+                                <strong>10:40 30 октября 2020 г.</strong>
+                                <br>
+                                по
+                                <strong>17:00 8 ноября 2020 г.</strong>
+                            </p>
+                        </div>
+                        <div class="customer-info__row">
+                            <p class="customer-info__label">
+                                Требуется доставка:
+                            </p>
+                            <p class="customer-info__name">
+                                г. Москва, ул. Центарильная 21
+                            </p>
+                        </div>
+
+                        <!--TODO: если ИДУТ торги-->
+                        <!--<div class="customer-info__row">
+                            <p class="customer-info__label">
+                                Статус: <span class="customer-info__accent-green">Идут торги</span>
+                            </p>
+                        </div>
+                        <div class="customer-info__footnote">
+                            <p class="customer-info__footnote-label">
+                                <span>Предложений по лоту:&nbsp;</span>
+                                <span class="customer-info__accent-black">0</span>
+                            </p>
+                            <a href="" class="customer-info__btn btn btn-primary js-take-part">Принять участие в торгах</a>
+                        </div>-->
+                        <!--TODO: если ИДУТ торги-->
+
+                        <!--TODO: если торги ЗАВЕРШЕНЫ-->
+                        <div class="customer-info__head">
+                            <p class="customer-info__label">
+                                Статус: <span class="customer-info__accent-grey">Торги завершены</span>
+                            </p>
+                        </div>
+                        <!--TODO: если торги ЗАВЕРШЕНЫ-->
+                    </div>
+                </div>
+
+                <div class="tender-page__row">
+                    <div class="customer-info">
+                        <div class="customer-info__row">
+                            <p class="customer-info__title">
+                                Состав заявки
+                            </p>
+                            <a href="#" class="customer-info__accent-blue link">
+                                <img src="img/icon-file.svg" alt="">&nbsp;
+                                <span>sostav_zayavki.xlsx</span>
+                            </a>
+                        </div>
+                        <div class="customer-info__head">
+                            <p class="customer-info__title">
+                                Состав заявки
+                            </p>
+                            <p class="customer-info__accent-blue">
+                                <img src="img/lock-blue.svg" alt="">&nbsp;
+                                <span>Доступно авторизованным пользователям</span>
+                            </p>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
